summative.moria.Moria.scala.error
Compilation error:
Moria:11: error: value forward is not a member of Unit
  right()forward();left();forward()
         ^Moria:18: error: not found: value isAgainstWall
  while(!isAgainstWall()){
         ^